ItemAscByNameTest fix mistakes #3 off test